log
Thu Apr 21 15:41:27 UTC 2022: 
 tests:  1|8
total_score: 0/70
f4339e9
Thu Apr 21 15:41:51 UTC 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  3|7
total_score: 0/70
0418947
Thu Apr 21 15:42:39 UTC 2022: 
 treemap.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  12|5
total_score: 15/70
a7772a3
Thu Apr 21 15:53:41 UTC 2022: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘nextTreeMap’:
treemap.c:104:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return minimum(aux->right);
                ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ccf7674
Thu Apr 21 15:54:38 UTC 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘nextTreeMap’:
treemap.c:105:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return minimum(aux);
                ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
65c7462
Thu Apr 21 15:55:16 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  14|5
total_score: 20/70
4ca3cb4
Thu Apr 21 15:57:26 UTC 2022: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  15|5
total_score: 20/70
b440eba
Thu Apr 21 16:05:13 UTC 2022: 
 treemap.c | 18 +++++-------------
 1 file changed, 5 insertions(+), 13 deletions(-)
 tests:  0|0
aae1a1d
Thu Apr 21 16:07:25 UTC 2022: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘upperBound’:
treemap.c:90:18: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     Pair * aux = tree->root;
                  ^~~~
treemap.c:91:15: error: ‘Pair {aka struct Pair}’ has no member named ‘right’
     while (aux->right != NULL) {
               ^~
treemap.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
24026e7
Thu Apr 21 16:07:38 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘upperBound’:
treemap.c:91:15: error: ‘Pair {aka struct Pair}’ has no member named ‘right’
     while (aux->right != NULL) {
               ^~
treemap.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
923a588
Thu Apr 21 16:12:50 UTC 2022: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
04e9288
Thu Apr 21 16:15:40 UTC 2022: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
0ac1ffc
